--- a/7up/7up.html
+++ b/7up/7up.html
@@ -20,7 +20,7 @@
         <div class="header">
         <nav>
             <div class="logo">
-                <img src="7up logo.webp" alt="" width="120px">
+                <img src="7up-images/7up logo.webp" alt="" width="120px">
             </div>
             <div class="right">
 
